--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>David Reiffert</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="res/css/w3.css">
+<link rel="stylesheet" href="res/css/css_custom.css">
+<!-- favicon -->
+<link rel="apple-touch-icon" sizes="180x180" href="res/img/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="res/img/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="res/img/favicon/favicon-16x16.png">
+<link rel="manifest" href="res/img/favicon/site.webmanifest">
+<link rel="mask-icon" href="res/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="res/img/favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="res/img/favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
-<body class="w3-content" style="max-width:1300px">
-
-    <div class="w3-center">
-        <div class="w3-half w3-black w3-container w3-center" style="height:700px">
-            <div class="w3-padding-64">
-                <h1>My Logo</h1>
-            </div>
-            <div class="w3-padding-64">
-                <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
-                <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
-                <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Resume</a>
-                <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
+<!-- content -->
+<body class="w3-content light">
+    <div class="w3-container" style="max-width:1300px">
+        <div class="w3-center">
+            <div class="w3-container w3-center" style="height:700px">
+                <div class="w3-padding-64 light-accent">
+                    <h1>Hi I'm David</h1>
+                        <img class="w3-grayscale" src="res/img/DavidReiffert_s.jpg" alt="David Reiffert">
+                </div>
             </div>
         </div>
     </div>
 
     <!-- Footer -->
-    <footer class="w3-container w3-black w3-padding-16">
-        
+    <footer class="w3-container">
+        <div class="w3-padding-8 dark w3-display-bottomright">
+            <a href="#" class="w3-button dark-accent w3-hover-dark-grey w3-padding-16">Home</a>
+            <a href="#legal" class="w3-button dark-accent w3-hover-dark-grey w3-padding-16">Impressum/Legal</a>
+        </div>
     </footer>
 
 </body>
