CSS magic added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="personalHead w3-display-container w3-opacity-min" id="home">
 
         <div class="w3-display-middle" style="white-space:nowrap;">
-            <span class="w3-center w3-padding-large col_1 w3-xlarge w3-wide w3-animate-opacity">DAVID REIFFERT</span>
+            <span data-heading="I" class="myh1 w3-center w3-padding-large col_1 w3-xlarge w3-wide w3-animate-opacity">DAVID REIFFERT</span>
         </div>
         <div class="lines">
             <div class="line"></div>
@@ -43,35 +43,22 @@
             <div class="line"></div>
         </div>
     </div>
-    <div class="w3-content w3-container w3-padding-64">
-        <h3 class="w3-center w3-animate-opacity" style="white-space:nowrap;">ABOUT ME</h3>
-        <p class="w3-center"><em>I love to code</em></p>
-        <p>keine ahnung was hier stehen soll</p>
-        <div class="w3-row">
-            <div class="w3-col m6 w3-center w3-padding-large">
-                <img src="res/img/DavidReiffert_s.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off"
-                    alt="Photo of David" width="500" height="333"> <br>
-                <p><b><i class="fa fa-user w3-margin-right"></i>David in the mountains</b></p>
-            </div>
+    <div class="w3-content w3-container w3-padding-8">
+        <h3 class="w3-center w3-animate-opacity">Software Enigneer</h3>
+        <div class="w3-bar w3-center">
+            <a href="#" class="bar-item-center">#c++</a>
+            <a href="#" class="bar-item-center">#csharp</a>
+            <a href="#" class="bar-item-center">#python</a>
+            <a href="#" class="bar-item-center">#javascript</a>
+        </div>
+        <h3 class="w3-center w3-animate-opacity">SAP Developer & Consultant</h3>
+        <div class="w3-bar w3-center">
+            <a href="#" class="bar-item-center">#abap-oo</a>
+            <a href="#" class="bar-item-center">#csharp</a>
+            <a href="#" class="bar-item-center">#python</a>
+            <a href="#" class="bar-item-center">#javascript</a>
+        </div>
 
-            <!-- Hide this text on small devices -->
-            <div class="w3-col m6 w3-hide-small">
-                <p>Welcome to my website.</p>
-            </div>
-        </div>
-        <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
-        <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
-        <div class="w3-light-grey">
-            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
-        </div>
-        <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
-        <div class="w3-light-grey">
-            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
-        </div>
-        <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
-        <div class="w3-light-grey">
-            <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-        </div>
     </div>
 
     <!-- Second Parallax Image with Portfolio Text -->
