change all the things

--- a/IndexV1.html
+++ b/IndexV1.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="res/css/w3.css">
-<link rel="stylesheet" href="res/css/css_custom.css">
+<link rel="stylesheet" href="res/css/css_custom_v1.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -47,10 +47,6 @@
         <h3 data-heading="w" class="myh2" onclick="changeData('sd')">#SAP Developer</h3>
         <h3 data-heading="w" class="myh2" onclick="changeData('ec')">#SAP EWM Consultant</h3>
     </div>
-    <canvas id="canvas" width="400" height="100" aria-label="Davids skills" role="chart"
-        class="w3-display-container w3-center">
-        <p>there should be a chart somewhere around here...</p>
-    </canvas>
     <!-- <div class="w3-display-container">
         <div class="w3-bar w3-center">
             <a href="#" class="bar-item-center">#c++</a>
@@ -72,7 +68,7 @@
     </div> -->
 
     <!-- Footer -->
-    <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+    <footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off">
         <div class="w3-xlarge w3-section">
             <a href="https://github.com/Kraut-bob" target="_blank" class="fa fa-github w3-hover-opacity w3-button"></a>
             <a href="https://www.linkedin.com/in/david-reiffert-65361b167/" target="_blank"
@@ -81,78 +77,8 @@
                 class="fa fa-xing w3-hover-opacity w3-button"></a>
         </div>
     </footer>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script>
-        var myPieChart;
-        var dataSE = {
-            data: [10, 20, 20, 30, 20],
-            label: 'Software Engineer',
-            labels: ['C++', 'CSharp', 'ABAP-OO', 'JavaScript', 'Python'],
-            backgroundColor: ['#ff6384', '#36a2eb', '#cc65fe', '#ffce56']
-        };
-        var dataSapDev = {
-            data: [15, 40, 25, 30],
-            label: 'SAP Developer',
-            labels: ['t1', 't2', 'ABAP-OO', 't3'],
-            backgroundColor: ['#ff6384', '#36a2eb', '#cc65fe', '#ffce56']
-        };
-        var dataSE = {
-            data: [10, 20, 20, 30],
-            label: 'SAP EWM Consultant',
-            labels: ['C++', 'CSharp', 'ABAP-OO', 'JavaScript', 'Python'],
-            backgroundColor: ['#ff6384', '#36a2eb', '#cc65fe', '#ffce56']
-        };
-
-        window.onload = function () {
-            onSiteLoad();
-        }
-
-        function onSiteLoad() {
-            var ctx = document.getElementById('canvas').getContext('2d');
-            var data = {
-                datasets: [dataSE],
-            };
-            var options = {
-                tooltips: {
-                    callbacks: {
-                        label: function (item, data) {
-                            // console.log(item)
-                            var label = data.datasets[item.datasetIndex].labels[item.index];
-                            var value = data.datasets[item.datasetIndex].data[item.index];
-                            return label + ': ' + value;
-                        }
-                    }
-                }
-            };
-
-            myPieChart = new Chart(ctx, {
-                type: 'pie',
-                data: data,
-                options: options
-            });
-
-            myPieChart.render();
-        }
-
-        function changeData(changeToSet) {
-            switch (changeToSet) {
-                case "se":
-                    alert('Software');
-                    break;
-                case "sd":
-                    myPieChart.data.datasets.forEach((dataset) => { dataset.data.splice(0, dataset.data.length); });
-                    myPieChart.data.datasets.forEach((dataset) => { dataset == dataSapDev; });
-                    myPieChart.update();
-                    break;
-                case "ec":
-                    alert('ewm consult');
-                    break;
-            }
-
-        }
-
-        // Used to toggle the menu on small screens when clicking on the menu button
+               // Used to toggle the menu on small screens when clicking on the menu button
         function toggleFunction() {
             var x = document.getElementById("navDemo");
             if (x.className.indexOf("w3-show") == -1) {
