--- a/IndexV2.html
+++ b/IndexV2.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container" id="home">
             <h1>David Reiffert</h1>
-            <img src="res/img/DavidReiffert_s.jpg" alt="Image David Reiffert">
+            <!-- <img src="res/img/DavidReiffert_s.jpg" alt="Image David Reiffert"> -->
             <h2>#Software Enigneer #SAP Developer #SAP Consultant</h2>
         </div>
     </header>
