--- a/IndexV2.html
+++ b/IndexV2.html
@@ -20,6 +20,7 @@
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="#vita">Vita</a></li>
             <li><a href="#legal">Legal</a></li>
         </ul>
     </nav>
@@ -49,6 +50,43 @@
                 </section>
             </article>
         </div>
+        <div class="container" id="vita">
+            <h2>Vita</h2>
+            <section class="timeline">
+                <ul>
+                    <li>
+                        <div>
+                            <time>1687</time>
+                            <div class="discovery">
+                                <h1>Discovery</h1>
+                                <p>
+                                    Laws of motion
+                                </p>
+                            </div>
+                            <div class="scientist">
+                                <h1>Scientist</h1>
+                                <span>Newton</span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <time>1785</time>
+                            <div class="discovery">
+                                <h1>Discovery</h1>
+                                <p>
+                                    Law of electrostatic attraction
+                                </p>
+                            </div>
+                            <div class="scientist">
+                                <h1>Scientist</h1>
+                                <span>Coulomb</span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+        </div>
     </main>
     <footer class="page-footer">
         <div class="container">
@@ -70,5 +108,33 @@
         </div>
     </footer>
 </body>
+<script type="text/javascript">
+    var items = document.querySelectorAll(".timeline li");
+
+    function isElementInViewport(el) {
+        var rect = el.getBoundingClientRect();
+        return (
+            rect.top >= 0 &&
+            rect.left >= 0 &&
+            rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+            rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+        );
+    }
+
+    function callbackFunc() {
+        for (var i = 0; i < items.length; i++) {
+            if (isElementInViewport(items[i])) {
+                if (!items[i].classList.contains("in-view")) {
+                    items[i].classList.add("in-view");
+                }
+            } else if (items[i].classList.contains("in-view")) {
+                items[i].classList.remove("in-view");
+            }
+        }
+    }
+
+    window.addEventListener("load", callbackFunc);
+    window.addEventListener("scroll", callbackFunc);
+</script>
 
 </html>
