vita to timeline

--- a/IndexV2.html
+++ b/IndexV2.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#vita">Vita</a></li>
+            <li><a href="#vita">Timeline</a></li>
             <li><a href="#legal">Legal</a></li>
         </ul>
     </nav>
@@ -51,7 +51,7 @@
             </article>
         </div>
         <div class="container" id="vita">
-            <h2>Vita</h2>
+            <h2>Timeline</h2>
             <section class="timeline">
                 <ul>
                     <li>
