--- a/IndexV2.html
+++ b/IndexV2.html
@@ -51,36 +51,32 @@
             </article>
         </div>
         <div class="container" id="vita">
-            <h2>Timeline</h2>
+            <article>
+                <h2>Timeline</h2>
+            </article>
             <section class="timeline">
                 <ul>
                     <li>
                         <div>
-                            <time>1687</time>
+                            <time>2012</time>
                             <div class="discovery">
-                                <h1>Discovery</h1>
+                                <h1>Hello World</h1>
                                 <p>
-                                    Laws of motion
+                                    First time programming
                                 </p>
-                            </div>
-                            <div class="scientist">
-                                <h1>Scientist</h1>
-                                <span>Newton</span>
                             </div>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <time>1785</time>
+                            <time>2015</time>
                             <div class="discovery">
-                                <h1>Discovery</h1>
+                                <h1>First public web app</h1>
                                 <p>
-                                    Law of electrostatic attraction
+                                    <a href="https://www.fhws.de/service/news-presse/pressemeldungen/?tx_ttnews%5Btt_news%5D=707&cHash=864df2adb4db13ca504391f1fcf4e0ec"
+                                        title="ESRI Young Scholars Award"> Campus Information System
+                                    </a>
                                 </p>
-                            </div>
-                            <div class="scientist">
-                                <h1>Scientist</h1>
-                                <span>Coulomb</span>
                             </div>
                         </div>
                     </li>
