--- a/IndexV2.html
+++ b/IndexV2.html
@@ -60,9 +60,22 @@
                         <div>
                             <time>2012</time>
                             <div class="discovery">
-                                <h1>Hello World</h1>
+                                <h1>#Hello World</h1>
                                 <p>
-                                    First time programming
+                                    for the first time
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <time>2014</time>
+                            <div class="discovery">
+                                <h1>First public web app</h1>
+                                <p>
+                                    <a href="https://www.fhws.de/service/news-presse/pressemeldungen/?tx_ttnews%5Btt_news%5D=707&cHash=864df2adb4db13ca504391f1fcf4e0ec"
+                                        title="ESRI Young Scholars Award"> Campus Information System
+                                    </a>
                                 </p>
                             </div>
                         </div>
@@ -71,12 +84,46 @@
                         <div>
                             <time>2015</time>
                             <div class="discovery">
-                                <h1>First public web app</h1>
+                                <h1>First real project</h1>
                                 <p>
-                                    <a href="https://www.fhws.de/service/news-presse/pressemeldungen/?tx_ttnews%5Btt_news%5D=707&cHash=864df2adb4db13ca504391f1fcf4e0ec"
-                                        title="ESRI Young Scholars Award"> Campus Information System
+                                    collection/evaluation/alarming/display of automatic measurements
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <time>2016</time>
+                            <div class="discovery">
+                                <h1>First SAP project</h1>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <time>2018</time>
+                            <div class="discovery">
+                                <h1>First Website</h1>
+                                <p> <a target="_blank" href="https://www.reiffert-optik.de/"
+                                        title="Reiffert Augenoptik & Hörakustik">Reiffert Augenoptik & Hörakustik
                                     </a>
                                 </p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <time>2019</time>
+                            <div class="discovery">
+                                <h1>First 3D Printer</h1>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <time>2020</time>
+                            <div class="discovery">
+                                <h1>First IoT devices</h1>
                             </div>
                         </div>
                     </li>
