--- a/Index.html
+++ b/Index.html
@@ -3,24 +3,34 @@
 <title>David Reiffert</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- <link rel="stylesheet" href="res/css/w3.css"> -->
 <link rel="stylesheet" href="res/css/css_custom_V2.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<head>
+    <link rel="apple-touch-icon" sizes="180x180" href="res/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="res/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="res/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="res/img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="res/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="res/img/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="res/img/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+</head>
 
 <body>
     <header>
         <div class="container" id="home">
             <h1>David Reiffert</h1>
-            <!-- <img src="res/img/DavidReiffert_s.jpg" alt="Image David Reiffert"> -->
-            <h2>#Software Enigneer #SAP Developer #SAP Consultant</h2>
+            <h2>I'm a <span class="typed-text"></span><span class="cursor">&nbsp;</span></h2>
         </div>
     </header>
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#legal">Legal</a></li>
+            <li><a href="legal.html#legal">Legal</a></li>
         </ul>
     </nav>
     <main id="main" tabIndex="-1">
@@ -70,5 +80,49 @@
         </div>
     </footer>
 </body>
+<script type="Text/javascript">
+
+const typedTextSpan = document.querySelector(".typed-text");
+const cursorSpan = document.querySelector(".cursor");
+
+const textArray = ["Software Enigneer", "SAP ABAP OO Developer", "SAP EWM Consultant"];
+const typingDelay = 100;
+const erasingDelay = 100;
+const newTextDelay = 2000;
+let textArrayIndex = 0;
+let charIndex = 0;
+
+function type() {
+  if (charIndex < textArray[textArrayIndex].length) {
+    if(!cursorSpan.classList.contains("typing")) cursorSpan.classList.add("typing");
+    typedTextSpan.textContent += textArray[textArrayIndex].charAt(charIndex);
+    charIndex++;
+    setTimeout(type, typingDelay);
+  } 
+  else {
+    cursorSpan.classList.remove("typing");
+  	setTimeout(erase, newTextDelay);
+  }
+}
+
+function erase() {
+	if (charIndex > 0) {
+    if(!cursorSpan.classList.contains("typing")) cursorSpan.classList.add("typing");
+    typedTextSpan.textContent = textArray[textArrayIndex].substring(0, charIndex-1);
+    charIndex--;
+    setTimeout(erase, erasingDelay);
+  } 
+  else {
+    cursorSpan.classList.remove("typing");
+    textArrayIndex++;
+    if(textArrayIndex>=textArray.length) textArrayIndex=0;
+    setTimeout(type, typingDelay + 1100);
+  }
+}
+
+document.addEventListener("DOMContentLoaded", function() { // On DOM Load initiate the effect
+  if(textArray.length) setTimeout(type, newTextDelay + 250);
+});
+</script>
 
 </html>
