--- a/legal.html
+++ b/legal.html
@@ -3,7 +3,7 @@
 <title>David Reiffert</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="res/css/css_custom_V2.css">
+<link rel="stylesheet" href="res/css/style.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 
 <head>
