--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <title>David Reiffert</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="res/css/style.css">
+<link rel="stylesheet" href="res/css/style.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -50,10 +50,10 @@
                     <blockquote>
                         <p><strong>in my spare time:</strong></p>
                         <div class="bar expert" data-skill="3D-Printing"></div>
-                        <div class="bar basic" data-skill="Full Stack Web-development"></div>
+                        <div class="bar basic" data-skill="Web-development"></div>
                         <div class="bar intermediate" data-skill="C++/CSharp"></div>
                         <div class="bar learning" data-skill="IoT"></div>
-                        <div class="bar basic" data-skill="tinkering with electronics"></div>
+                        <div class="bar basic" data-skill="Tinkering with electronics"></div>
                     </blockquote>
                     </p>
                 </section>
